[gd_scene load_steps=30 format=2]

[ext_resource path="res://Sprites/UI Window BG.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Background.png" type="Texture" id=2]
[ext_resource path="res://Sprites/BackgroundwChickens.png" type="Texture" id=3]
[ext_resource path="res://Sprites/CHICKEN.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Nurse/NurseIcon.png" type="Texture" id=5]
[ext_resource path="res://scripts/OutfitItemButton.gd" type="Script" id=6]
[ext_resource path="res://scripts/screenshot.gd" type="Script" id=7]
[ext_resource path="res://addons/HuePicker/HuePicker.tscn" type="PackedScene" id=8]
[ext_resource path="res://Sprites/Trash Button.png" type="Texture" id=9]
[ext_resource path="res://Sprites/SailorUniform/SailorUniformIcon.png" type="Texture" id=10]
[ext_resource path="res://DragDropController.tscn" type="PackedScene" id=11]
[ext_resource path="res://Sprites/Gakuran/GakuranIcon.png" type="Texture" id=12]
[ext_resource path="res://scripts/TrashButton.gd" type="Script" id=13]
[ext_resource path="res://outline.shader" type="Shader" id=14]
[ext_resource path="res://Sprites/Maid/MaidIcon.png" type="Texture" id=15]
[ext_resource path="res://Sprites/Bikini/BikiniIcon.png" type="Texture" id=16]
[ext_resource path="res://Sprites/KFP/KFPUniform.png" type="Texture" id=17]
[ext_resource path="res://Sprites/Download Button.png" type="Texture" id=18]
[ext_resource path="res://SFX/camera.ogg" type="AudioStream" id=19]
[ext_resource path="res://SFX/camera_setup.ogg" type="AudioStream" id=20]
[ext_resource path="res://SFX/Takanashi Kiara BGM.mp3" type="AudioStream" id=21]
[ext_resource path="res://SFX/beep-00.wav" type="AudioStream" id=22]
[ext_resource path="res://SFX/sfx_throw.wav" type="AudioStream" id=23]
[ext_resource path="res://SFX/Item.wav" type="AudioStream" id=24]

[sub_resource type="ShaderMaterial" id=3]
shader = ExtResource( 14 )
shader_param/Smooth = true
shader_param/width = 50.0
shader_param/outline_color = Color( 1, 0.772549, 0, 1 )
shader_param/pixel_size = 10

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 951.524, 579.54 )

[sub_resource type="ImageTexture" id=4]

[sub_resource type="Animation" id=5]
resource_name = "CameraFlash"
length = 0.3
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:color:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0.854902, -0.25, 0, 0.25, 0, 0.854902, -0.25, 0, 0.25, 0, 0.854902, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.117001, 0.301769 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:color:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0.815686, -0.25, 0, 0.25, 0, 0.815686, -0.25, 0, 0.25, 0, 0.815686, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.117001, 0.301769 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath(".:color:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0.552941, -0.25, 0, 0.25, 0, 0.552941, -0.25, 0, 0.25, 0, 0.552941, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.117001, 0.301769 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath(".:color:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0.541176, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.117001, 0.301769 )
}

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:color:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0.854902, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:color:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0.815686, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath(".:color:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0.552941, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath(".:color:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[node name="Main" type="Node2D"]
scale = Vector2( 0.555895, 0.555895 )
script = ExtResource( 7 )
shortcut_action = "screenshot_key"

[node name="SelectedObjectController" parent="." instance=ExtResource( 11 )]
snap = 15
outline_shader = SubResource( 3 )

[node name="SelectAudio" type="AudioStreamPlayer" parent="SelectedObjectController"]
stream = ExtResource( 22 )
volume_db = -15.0

[node name="SpawnAudio" type="AudioStreamPlayer" parent="SelectedObjectController"]
stream = ExtResource( 24 )
volume_db = -20.0

[node name="TrashAudio" type="AudioStreamPlayer" parent="SelectedObjectController"]
stream = ExtResource( 23 )
volume_db = -15.0

[node name="Background" type="Sprite" parent="."]
position = Vector2( 959.92, 539.506 )
scale = Vector2( 1.00303, 1.00303 )
texture = ExtResource( 2 )

[node name="StaticBody2D" type="StaticBody2D" parent="Background" groups=["bg"]]
input_pickable = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Background/StaticBody2D"]
visible = false
position = Vector2( -105.656, -61.0199 )
shape = SubResource( 2 )

[node name="BGwChickens" type="Sprite" parent="."]
visible = false
position = Vector2( 959.92, 539.506 )
scale = Vector2( 1.00303, 1.00303 )
texture = ExtResource( 3 )

[node name="Menu" type="Sprite" parent="."]
position = Vector2( 1593.83, 521.681 )
scale = Vector2( 1.07633, 1.001 )
texture = ExtResource( 1 )

[node name="Outfits Scroll2" type="ScrollContainer" parent="Menu"]
margin_left = -81.0
margin_top = 9.0
margin_right = 231.0
margin_bottom = 182.0
size_flags_horizontal = 7
size_flags_vertical = 7
scroll_vertical_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Outfits Horizontal" type="HBoxContainer" parent="Menu/Outfits Scroll2"]
margin_right = 1220.0
margin_bottom = 150.0
size_flags_horizontal = 0
size_flags_vertical = 0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="KFPOutfitButton" type="TextureButton" parent="Menu/Outfits Scroll2/Outfits Horizontal"]
margin_right = 200.0
margin_bottom = 150.0
rect_min_size = Vector2( 200, 150 )
size_flags_horizontal = 2
size_flags_vertical = 2
texture_normal = ExtResource( 17 )
expand = true
script = ExtResource( 6 )
asset_name = "KFPOutfit"
snapPoint = Vector2( 424.541, 422.742 )

[node name="MaidOutfitButton" type="TextureButton" parent="Menu/Outfits Scroll2/Outfits Horizontal"]
margin_left = 204.0
margin_right = 404.0
margin_bottom = 150.0
rect_min_size = Vector2( 200, 150 )
size_flags_horizontal = 2
size_flags_vertical = 2
texture_normal = ExtResource( 15 )
expand = true
script = ExtResource( 6 )
asset_name = "MaidDress"
snapPoint = Vector2( 426.34, 433.535 )

[node name="NurseOutfitButton" type="TextureButton" parent="Menu/Outfits Scroll2/Outfits Horizontal"]
margin_left = 408.0
margin_right = 608.0
margin_bottom = 150.0
rect_min_size = Vector2( 200, 150 )
size_flags_horizontal = 2
size_flags_vertical = 2
texture_normal = ExtResource( 5 )
expand = true
script = ExtResource( 6 )
asset_name = "NurseOutfit"
snapPoint = Vector2( 413.747, 420.943 )

[node name="SailorUniformOutfitButton" type="TextureButton" parent="Menu/Outfits Scroll2/Outfits Horizontal"]
margin_left = 612.0
margin_right = 812.0
margin_bottom = 150.0
rect_min_size = Vector2( 200, 150 )
size_flags_horizontal = 2
size_flags_vertical = 2
texture_normal = ExtResource( 10 )
expand = true
script = ExtResource( 6 )
asset_name = "SailorUniform"
snapPoint = Vector2( 422.742, 433.535 )

[node name="GakuranOutfitButton" type="TextureButton" parent="Menu/Outfits Scroll2/Outfits Horizontal"]
margin_left = 816.0
margin_right = 1016.0
margin_bottom = 150.0
rect_min_size = Vector2( 200, 150 )
size_flags_horizontal = 2
size_flags_vertical = 2
texture_normal = ExtResource( 12 )
expand = true
script = ExtResource( 6 )
asset_name = "Gakuran"
snapPoint = Vector2( 422.742, 440.731 )

[node name="BikiniOutfitButton" type="TextureButton" parent="Menu/Outfits Scroll2/Outfits Horizontal"]
margin_left = 1020.0
margin_right = 1220.0
margin_bottom = 150.0
rect_min_size = Vector2( 200, 150 )
size_flags_horizontal = 2
size_flags_vertical = 2
texture_normal = ExtResource( 16 )
expand = true
script = ExtResource( 6 )
asset_name = "BikiniOutfit"
snapPoint = Vector2( 424.54, 453.323 )

[node name="CHICKEN" type="Sprite" parent="."]
position = Vector2( 697.973, 590.039 )
texture = ExtResource( 4 )

[node name="Trash Button" type="TextureButton" parent="."]
margin_left = 1154.89
margin_top = 897.651
margin_right = 1404.89
margin_bottom = 1147.65
rect_scale = Vector2( 0.6, 0.6 )
disabled = true
texture_normal = ExtResource( 9 )
texture_disabled = SubResource( 4 )
expand = true
stretch_mode = 4
script = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Save Button" type="TextureButton" parent="."]
margin_left = 30.0
margin_top = 30.0
margin_right = 280.0
margin_bottom = 280.0
rect_scale = Vector2( 0.6, 0.6 )
texture_normal = ExtResource( 18 )
expand = true
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ColorPicker" parent="." instance=ExtResource( 8 )]
visible = false
margin_left = 12.5923
margin_top = 813.103
margin_right = 268.592
margin_bottom = 1069.1

[node name="OutfitItems" type="Node2D" parent="."]

[node name="CameraFlash" type="ColorRect" parent="."]
margin_right = 1847.0
margin_bottom = 1094.0
mouse_filter = 2
color = Color( 0.854902, 0.815686, 0.552941, 0 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="CameraFlash"]
anims/CameraFlash = SubResource( 5 )
anims/RESET = SubResource( 6 )

[node name="CameraAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 19 )
volume_db = -15.0

[node name="BGM" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 21 )
volume_db = -30.0
autoplay = true

[node name="CameraSetup" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 20 )

[connection signal="object_deselected" from="SelectedObjectController" to="Trash Button" method="disable_button"]
[connection signal="object_selected" from="SelectedObjectController" to="Trash Button" method="enable_button"]
[connection signal="object_spawned" from="Menu/Outfits Scroll2/Outfits Horizontal/KFPOutfitButton" to="SelectedObjectController" method="select_object"]
[connection signal="pressed" from="Menu/Outfits Scroll2/Outfits Horizontal/KFPOutfitButton" to="Menu/Outfits Scroll2/Outfits Horizontal/KFPOutfitButton" method="_on_TextureButton_pressed"]
[connection signal="object_spawned" from="Menu/Outfits Scroll2/Outfits Horizontal/MaidOutfitButton" to="SelectedObjectController" method="select_object"]
[connection signal="pressed" from="Menu/Outfits Scroll2/Outfits Horizontal/MaidOutfitButton" to="Menu/Outfits Scroll2/Outfits Horizontal/MaidOutfitButton" method="_on_TextureButton_pressed"]
[connection signal="object_spawned" from="Menu/Outfits Scroll2/Outfits Horizontal/NurseOutfitButton" to="SelectedObjectController" method="select_object"]
[connection signal="pressed" from="Menu/Outfits Scroll2/Outfits Horizontal/NurseOutfitButton" to="Menu/Outfits Scroll2/Outfits Horizontal/NurseOutfitButton" method="_on_TextureButton_pressed"]
[connection signal="object_spawned" from="Menu/Outfits Scroll2/Outfits Horizontal/SailorUniformOutfitButton" to="SelectedObjectController" method="select_object"]
[connection signal="pressed" from="Menu/Outfits Scroll2/Outfits Horizontal/SailorUniformOutfitButton" to="Menu/Outfits Scroll2/Outfits Horizontal/SailorUniformOutfitButton" method="_on_TextureButton_pressed"]
[connection signal="object_spawned" from="Menu/Outfits Scroll2/Outfits Horizontal/GakuranOutfitButton" to="SelectedObjectController" method="select_object"]
[connection signal="pressed" from="Menu/Outfits Scroll2/Outfits Horizontal/GakuranOutfitButton" to="Menu/Outfits Scroll2/Outfits Horizontal/GakuranOutfitButton" method="_on_TextureButton_pressed"]
[connection signal="object_spawned" from="Menu/Outfits Scroll2/Outfits Horizontal/BikiniOutfitButton" to="SelectedObjectController" method="select_object"]
[connection signal="pressed" from="Menu/Outfits Scroll2/Outfits Horizontal/BikiniOutfitButton" to="Menu/Outfits Scroll2/Outfits Horizontal/BikiniOutfitButton" method="_on_TextureButton_pressed"]
[connection signal="pressed" from="Trash Button" to="SelectedObjectController" method="trash_selected"]
[connection signal="pressed" from="Save Button" to="." method="make_screenshot"]
[connection signal="color_changed" from="ColorPicker" to="SelectedObjectController" method="color_changed"]
